objects/Booking_Package__c.object
<CustomObject>
    <fields>
        <fullName>Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking_Packages_Prov_Keys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. (BP - Account)</errorMessage>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>Account.Parent.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking Packages/Prov Requests (Account)</relationshipLabel>
        <relationshipName>Booking_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Close Quarter</label>
        <referenceTo>Expected_Close_Quarter__c</referenceTo>
        <relationshipName>Booking_Packages_Prov_Keys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Deal_TCV__c</fullName>
        <formula>Actual_TCV_P_M__c + Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Deal TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Quarter_Close_Date__c</fullName>
        <formula>Actual_Close_Quarter__r.Expected_Close_Date__c</formula>
        <label>Actual Quarter Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_TCV_P_M__c</fullName>
        <label>Actual TCV (P&amp;M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>Actual_TCV_USD__c</fullName>
        <label>Actual TCV (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Term__c</fullName>
        <inlineHelpText>Input the actual term length in number of months.</inlineHelpText>
        <label>Actual Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Transaction_Type__c</fullName>
        <label>Actual Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>99-YR/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEND-serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW-99Yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW-Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW-Ren Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAgold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAplat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA-Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP - Tensilica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Access Selection/DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan with fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ren Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM-Ren Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serv - IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-99-Yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-eDAgold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-eDAplat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-FTA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appprval_Part_1_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Part 1 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Step_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will notify which approval step is approved.</description>
        <label>Approval Step Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Step_Information__c</fullName>
        <description>Contain Step Name and Approver Name of  the Approved Steps</description>
        <label>AP OM</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_LTR__c</fullName>
        <label>Attachment LTR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Approval_Step__c</fullName>
        <description>This field will be used to hold a value for the current approval step a record is waiting for.</description>
        <label>Booking Approval Step</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Package_End__c</fullName>
        <label>Booking Package End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Remaining_Steps__c</fullName>
        <label>Booking Package Remaining Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Start__c</fullName>
        <label>Booking Package Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Package_Time__c</fullName>
        <formula>24*(Booking_Package_End__c - Booking_Package_Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Package Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDN_Agreement2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDN Agreement</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>Apttus__APTS_Agreement__c.Apttus__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Apttus__APTS_Agreement__c.Apttus__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Legacy Agreement Numbers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Booking Packages/Prov Requests</relationshipLabel>
        <relationshipName>Booking_Packages_Prov_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDN_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDN Agreement</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. (Agreement)</errorMessage>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <valueField>Agreement__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Agreement__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Booking Packages/Prov Requests</relationshipLabel>
        <relationshipName>Booking_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDS_Hungary_Start__c</fullName>
        <label>CDS/Hungary Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CDS_Hungary_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CDS/Hungary Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Canada_Legal_Start__c</fullName>
        <label>Canada Legal Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Canada_Legal_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canada Legal Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. (Channel Partner)</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking Packages/Prov Requests (Channel Partner)</relationshipLabel>
        <relationshipName>Booking_Packages_Channel_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Locked Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>SUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAgold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAplat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_WBS__c</fullName>
        <label>Contract/WBS#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_RA_Start__c</fullName>
        <label>Credit/RA Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_RA_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit/RA Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Start__c</fullName>
        <label>Credit Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Execution_Date__c</fullName>
        <label>Customer Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Order_Released__c</fullName>
        <label>Date Order Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Approval_Status__c</fullName>
        <description>Describes Opportunity&apos;s Deal Approval Status</description>
        <label>Deal Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Fast Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Approval_Time__c</fullName>
        <description>Stores the difference between the date/time when a Booking Package is submitted for approval and the date/time when it is approved and Sap # is updated in the Booking Package.</description>
        <label>Deal Approval Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dublin_OM_Start__c</fullName>
        <label>Dublin OM Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dublin_OM_Time__c</fullName>
        <label>Dublin OM Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edit_Booking_Package__c</fullName>
        <description>This field will be used to contain the hyperlink used to edit a locked Booking Package.</description>
        <formula>IF(
 ISPICKVAL(Status__c ,&quot;Pending&quot;),
 HYPERLINK(&quot;/apex/UpdateLockedBookingPackage_VP?id=&quot; &amp;  Id, &quot;Click here&quot; ,&quot;_self&quot;),
&quot;This record is not locked&quot; 
)</formula>
        <inlineHelpText>If the Booking Package is in an approval process, click this link to update needed fields.</inlineHelpText>
        <label>Edit Booking Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_CDN_Agreement__c</fullName>
        <label>Entry CDN Agreement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Shipped_Flag__c</fullName>
        <description>Always checked if actual transaction type is one of IP, IP-Tensilica, IP Combo, IP Access Selection/DD, Serv, Serv - IP, Ren Maint, AMEND, AMEND- SERV, HW- Ren Maint, HW-Lease, HW-Cloud, HW-99 yr, Ren Maint, SAM - Ren Maint, VAR- IP, VAR-Ren Maint.</description>
        <formula>AND($Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;, $Setup.Data_Migration__c.Data_Migration_Bypass__c == false, OR( 
TEXT(Actual_Transaction_Type__c)=&quot;AMEND-Serv&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;AMEND&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;HW-Ren Maint&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;HW-Lease&quot;,
TEXT(Actual_Transaction_Type__c)=&quot;HW-Cloud&quot;,  
TEXT(Actual_Transaction_Type__c)=&quot;HW-99Yr&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;IP&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;IP - Tensilica&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;IP Access Selection/DD&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;IP Combo&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;Ren Maint&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;SAM-Ren Maint&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;SERV&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;VAR-IP&quot;, 
TEXT(Actual_Transaction_Type__c)=&quot;VAR-Ren Maint&quot;,
TEXT(Actual_Transaction_Type__c)=&quot;Serv - IP&quot;
), $RecordType.Name =&quot;Booking Package&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This flag is checked and Shipped Date is cleared if the Actual transaction type is one of the following: IP,IP-Tensilica,Serv,Serv - IP,Ren Maint,AMEND,AMEND- SERV,HW- Ren Maint,HW-Lease,HW-Cloud,HW-99 yr,Ren Maint,SAM - Ren Maint,VAR- IP,VAR-Ren Maint.</inlineHelpText>
        <label>Exclude Shipped Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Close Quarter</label>
        <referenceTo>Expected_Close_Quarter__c</referenceTo>
        <relationshipName>Booking_Packages_Prov_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expedite_Booking_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be used to define a package as needing to be expedited.</description>
        <label>Expedite Booking Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedite_Comments_Text__c</fullName>
        <formula>IF(
OR(
RecordType.Name = &quot;Booking Package&quot; &amp;&amp; Expedite_Booking_Package__c = TRUE, 
RecordType.Name = &quot;Prov Request&quot; &amp;&amp;  Expedite_Prov_Request__c = TRUE
),
&quot;Expedite Comments: &quot; &amp; Expedite_Comments__c ,
NULL
)</formula>
        <label>Expedite Comments Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Comments__c</fullName>
        <description>This field will be used to track comments on why the record should be expedited.</description>
        <label>Expedite Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expedite_Prov_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite Prov Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedite_Text__c</fullName>
        <formula>IF(
OR(
RecordType.Name = &quot;Booking Package&quot; &amp;&amp; Expedite_Booking_Package__c = TRUE, 
RecordType.Name = &quot;Prov Request&quot; &amp;&amp;  Expedite_Prov_Request__c = TRUE),
&quot;--EXPEDITE--&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expedite Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedited_Date__c</fullName>
        <description>This field will be used to track when the Expedited checkbox was used (date/time).</description>
        <inlineHelpText>This field will be updated automatically when the Expedited checkbox is checked.</inlineHelpText>
        <label>Expedited Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fast_Track_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Admin_Start__c</fullName>
        <label>Field Admin Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Admin_Time__c</fullName>
        <label>Field Admin Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flow_Type__c</fullName>
        <label>Flow Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastTrack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Access_Selection_sent_to_OM_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Access/Tensilica sent to OM NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_AP__c</fullName>
        <description>Contains SAP Invoice number</description>
        <inlineHelpText>Available for Asia Pacific Region only.</inlineHelpText>
        <label>Invoice Number(AP)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ireland_Legal_Start__c</fullName>
        <label>Ireland Legal Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ireland_Legal_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ireland Legal Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kanji_Notes__c</fullName>
        <label>Kanji Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legal_1_Start__c</fullName>
        <label>Legal 1 Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_1_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal 1 Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_2_Start__c</fullName>
        <label>Legal 2 Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_2_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal 2 Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_3_Start__c</fullName>
        <label>Legal 3 Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_3_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legal 3 Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Start__c</fullName>
        <label>Legal Review Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Time__c</fullName>
        <label>Legal Review Time</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_review__c</fullName>
        <inlineHelpText>If required select Region.</inlineHelpText>
        <label>Legal review</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maint1__c</fullName>
        <formula>CASE(
Actual_Transaction_Type__c,
&quot;CVA-Lease&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100), 
&quot;CVA-99Yr&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;CVA-Ren Maint&quot;, Actual_TCV_P_M__c * (1*(Actual_Term__c /12)/100),
&quot;eDAgold&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;eDAplat&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;FTA-Add-on&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;FTA-New&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;IP&quot;, Actual_TCV_P_M__c * (0.18*(Actual_Term__c /12)/100),
&quot;Ren Maint&quot;, Actual_TCV_P_M__c * (1*(Actual_Term__c /12)/100),
&quot;SAM&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;SAM-Ren Maint&quot;, Actual_TCV_P_M__c * (1*(Actual_Term__c /12)/100),
&quot;Serv&quot;, Actual_TCV_P_M__c * (0*(Actual_Term__c /12)/100),
&quot;SUB&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;SUB Add-on&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;TBL&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;UNIV&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-eDAgold&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-eDAplat&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-FTA&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-FTA Add-on&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-Ren Maint&quot;, Actual_TCV_P_M__c * (1*(Actual_Term__c /12)/100),
&quot;VAR-SAM&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-SUB&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-SUB Add-on&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-TBL&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-VIP&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;VAR-99-Yr&quot;, Actual_TCV_P_M__c * (0.12*(Actual_Term__c /12)/100),
&quot;VIP&quot;, Actual_TCV_P_M__c * (0.09*(Actual_Term__c /12)/100),
&quot;99-YR/Other&quot;, Actual_TCV_P_M__c * (0.12*(Actual_Term__c /12)/100),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maint_TCV__c</fullName>
        <formula>Actual_TCV_P_M__c * Maint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maint__c</fullName>
        <label>Maint %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NET_Trans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NET Trans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Payment_Term__c</fullName>
        <description>When &apos;Others/Non-Standard&apos; Payment Term selected, User need to give the Non-Standard Payment Term in the &apos;Non-Standard Payment Term&apos; text field</description>
        <label>Non-Standard Payment Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Booking_Start__c</fullName>
        <label>OM Booking Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OM_Booking_Time__c</fullName>
        <label>OM Booking Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Sign_Start__c</fullName>
        <label>OM Sign Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OM_Sign_Time__c</fullName>
        <label>OM Sign Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_AutoNumber__c</fullName>
        <description>Used for Email Templates</description>
        <formula>Opportunity__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Email Templates</inlineHelpText>
        <label>Opportunity_AutoNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>This field will display the ID of the Opportunity related to the Booking Package.</description>
        <formula>Opportunity__r.Opportunity_Id__c</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Booking_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Management_Start__c</fullName>
        <label>Order Management Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Management_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Management Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking_Packages_Prov_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIA_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PIA Orders</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>